--- a/frontend/app/assets/css/main.css
+++ b/frontend/app/assets/css/main.css
@@ -28,18 +28,18 @@
     --p-primary-800: #1d3b57;
     --p-primary-900: #122334;
     --p-primary-950: #022c22;
-    --p-surface-0: #ffffff;
-    --p-surface-50: #fafafa;
-    --p-surface-100: #f4f4f5;
-    --p-surface-200: #e4e4e7;
-    --p-surface-300: #d4d4d8;
-    --p-surface-400: #a1a1aa;
-    --p-surface-500: #71717a;
-    --p-surface-600: #52525b;
-    --p-surface-700: #3f3f46;
-    --p-surface-800: #27272a;
-    --p-surface-900: #18181b;
-    --p-surface-950: #09090b;
+    --p-surface-0: #ffff;
+    --p-surface-50: #eef4f9;
+    --p-surface-100: #cbdded;
+    --p-surface-200: #a8c6e2;
+    --p-surface-300: #86afd6;
+    --p-surface-400: #6399ca;
+    --p-surface-500: #4082bf;
+    --p-surface-600: #356a9c;
+    --p-surface-700: #295379;
+    --p-surface-800: #1d3b57;
+    --p-surface-900: #122334;
+    --p-surface-950: #022c22;
     --p-content-border-radius: 6px;
 
     --font-sans: 'Manrope', sans-serif;
